CHATS_SIT/force-app/main/default/objects/Batch_Log__c.object
<CustomObject>
    <description>Object to maintain batch Logs</description>
    <fields>
        <fullName>Batch_Name__c</fullName>
        <label>Batch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Error Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Records_Failed__c</fullName>
        <label>Records_Failed</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Records_Processed__c</fullName>
        <label>Records Processed</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>end_time__c</fullName>
        <label>end time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ind_sched__c</fullName>
        <label>ind_sched</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>start_time__c</fullName>
        <label>start time</label>
        <type>DateTime</type>
    </fields>
    <label>Batch Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BL-{00000}</displayFormat>
        <label>Batch Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>